--- a/shopshow/templates/home.html
+++ b/shopshow/templates/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Promo Union</title>
+    <title>JNB Promo Inc</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'css/home.css' %}">
     <link rel="stylesheet" href="{% static 'js/bootstrap.bundle.js' %}">
@@ -69,12 +69,13 @@
                 </svg>
              </div>
             <div class="col-lg-4">
-                <span class="d-inline-block" tabindex="0" data-toggle="tooltip" title="(518) 765-1199">
-                    <div style="pointer-events: none;" type="button" disabled>(518) 765-1199</div>
+                <span class="d-inline-block" tabindex="0" data-toggle="tooltip" title="(646) 687-7800">
+                    <div style="pointer-events: none;" type="button" disabled>(646) 687-7800</div>
+                    <div style="pointer-events: none;" type="button" disabled>(646) 699-8277</div>
                 </span>
             </div>
             <div class="col-lg-2">
-                <a href="mailto:support@promo-union.com" class="text">
+                <a href="mailto:sales@jnbpromos.com" class="text">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-envelope-at-fill" viewBox="0 0 16 16">
                         <path d="M2 2A2 2 0 0 0 .05 3.555L8 8.414l7.95-4.859A2 2 0 0 0 14 2H2Zm-2 9.8V4.698l5.803 3.546L0 11.801Zm6.761-2.97-6.57 4.026A2 2 0 0 0 2 14h6.256A4.493 4.493 0 0 1 8 12.5a4.49 4.49 0 0 1 1.606-3.446l-.367-.225L8 9.586l-1.239-.757ZM16 9.671V4.697l-5.803 3.546.338.208A4.482 4.482 0 0 1 12.5 8c1.414 0 2.675.652 3.5 1.671Z"/>
                         <path d="M15.834 12.244c0 1.168-.577 2.025-1.587 2.025-.503 0-1.002-.228-1.12-.648h-.043c-.118.416-.543.643-1.015.643-.77 0-1.259-.542-1.259-1.434v-.529c0-.844.481-1.4 1.26-1.4.585 0 .87.333.953.63h.03v-.568h.905v2.19c0 .272.18.42.411.42.315 0 .639-.415.639-1.39v-.118c0-1.277-.95-2.326-2.484-2.326h-.04c-1.582 0-2.64 1.067-2.64 2.724v.157c0 1.867 1.237 2.654 2.57 2.654h.045c.507 0 .935-.07 1.18-.18v.731c-.219.1-.643.175-1.237.175h-.044C10.438 16 9 14.82 9 12.646v-.214C9 10.36 10.421 9 12.485 9h.035c2.12 0 3.314 1.43 3.314 3.034v.21Zm-4.04.21v.227c0 .586.227.8.581.8.31 0 .564-.17.564-.743v-.367c0-.516-.275-.708-.572-.708-.346 0-.573.245-.573.791Z"/>
@@ -557,20 +558,19 @@
                     <p class="aboutInfoP">Our website showcases over 100,000 products, giving our clients access to an unparalleled selection of items to choose from. From classic promotional items like pens and mugs to unique eco-friendly products like bamboo utensils and recycled tote bags, we have something for everyone.
                         At our company, we believe in putting our clients first. We strive to provide the best possible customer service, working with our clients to find the perfect product for their needs and ensuring that their orders are delivered on time and to their satisfaction. Our commitment to our clients is reflected in our 200+ positive reviews from satisfied customers.</p>
                     <p class="aboutInfoP">Thank you for choosing us as your promotional products supplier. We look forward to helping you achieve your branding goals while also making a positive impact on the environment.</p>
-                    <a href="" class="btn btn-primary aboutInfoButton">learn more</a>
+                    <a href="{% url 'contact' %}" class="btn btn-primary aboutInfoButton">learn more</a>
                 </div>
             </div>
 
             <div class="col-lg-6" id="container-row-right">
                 <div class="aboutInfoPlace">
                     <div class="aboutInfoTitle"><h1>Our Services</h1></div>
-                    <p class="aboutInfoP">At our company, we offer a range of services to help our clients achieve their branding goals. Whether you're looking for custom promotional products, free mock-up services, or help with shipping, we've got you covered.</p>
-                    <p class="aboutInfoP">Custom Branding: We specialize in creating custom-branded promotional products that showcase your logo or message. Our team works with you to select the best products for your needs and ensures that your branding is consistent across all items.</p>
-                    <p class="aboutInfoP">Free Mock-Up Services: Our team can provide free mock-up services to help you visualize how your logo or design will look on different products. This allows you to see how your branding will appear before you place an order, giving you confidence in your selection.</p>
-                    <p class="aboutInfoP">Eco-Friendly Options: We understand the importance of sustainability and offer a range of eco-friendly promotional products. From reusable water bottles to recycled tote bags, we can help you make a positive impact on the environment.</p>
-                    <p class="aboutInfoP">Shipping: We provide fast and reliable shipping services, ensuring that your promotional products are delivered on time and to your satisfaction. We also offer tracking information and notifications so that you can stay informed about the status of your order.</p>
-                    <p class="aboutInfoP">At our company, we're committed to providing the highest quality services to our clients. We work closely with each client to understand their unique needs and offer tailored solutions that meet their goals. Contact us today to learn more about our services and how we can help you achieve your branding goals.</p>
-                    <a href="" class="btn btn-primary aboutInfoButton">learn more</a>
+                    <p class="aboutInfoP">Certainly! Here's a company introduction for JNB Promos Inc, a promotional product supplier under ASI:</p>
+                    <p class="aboutInfoP">Welcome to JNB Promos Inc, your premier destination for innovative and effective promotional products! As an esteemed promotional product supplier accredited by ASI (Advertising Specialty Institute), we take immense pride in delivering exceptional solutions tailored to elevate your brand presence.</p>
+                    <p class="aboutInfoP">At JNB Promos Inc, we understand that promotional products are more than just tangible items - they represent your brand's unique identity and message. With this understanding, we offer a diverse range of promotional products designed to leave a lasting impact on your target audience. From custom apparel and stylish accessories to tech-savvy gadgets and eco-friendly merchandise, we bring your promotional vision to life.</p>
+                    <p class="aboutInfoP">What sets us apart is our commitment to excellence and creativity. Our team of dedicated professionals works tirelessly to craft personalized mock-ups, enabling you to visualize your promotional products before they become a reality. This free mock-up service allows you to refine and perfect your choices, ensuring the end result aligns seamlessly with your brand's image and goals.</p>
+                    <p class="aboutInfoP">Join us on this exciting journey of promotional success. Let's collaborate and create promotional strategies that resonate with your audience, leaving a lasting impression that propels your brand forward. Elevate your promotional game with JNB Promos Inc and watch your brand flourish.</p>
+                    <a href="{% url 'contact' %}" class="btn btn-primary aboutInfoButton">learn more</a>
                 </div>
             </div>
         </div>
@@ -599,13 +599,13 @@
         <div class="col-lg-6 m-auto">
             
             <h4 class="pageFoot-font">
-                <a href="mailto:support@promo-union.com">
+                <a href="mailto:sales@jnbpromos.com">
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-envelope-at-fill" viewBox="0 0 16 16">
                         <path d="M2 2A2 2 0 0 0 .05 3.555L8 8.414l7.95-4.859A2 2 0 0 0 14 2H2Zm-2 9.8V4.698l5.803 3.546L0 11.801Zm6.761-2.97-6.57 4.026A2 2 0 0 0 2 14h6.256A4.493 4.493 0 0 1 8 12.5a4.49 4.49 0 0 1 1.606-3.446l-.367-.225L8 9.586l-1.239-.757ZM16 9.671V4.697l-5.803 3.546.338.208A4.482 4.482 0 0 1 12.5 8c1.414 0 2.675.652 3.5 1.671Z"/>
                         <path d="M15.834 12.244c0 1.168-.577 2.025-1.587 2.025-.503 0-1.002-.228-1.12-.648h-.043c-.118.416-.543.643-1.015.643-.77 0-1.259-.542-1.259-1.434v-.529c0-.844.481-1.4 1.26-1.4.585 0 .87.333.953.63h.03v-.568h.905v2.19c0 .272.18.42.411.42.315 0 .639-.415.639-1.39v-.118c0-1.277-.95-2.326-2.484-2.326h-.04c-1.582 0-2.64 1.067-2.64 2.724v.157c0 1.867 1.237 2.654 2.57 2.654h.045c.507 0 .935-.07 1.18-.18v.731c-.219.1-.643.175-1.237.175h-.044C10.438 16 9 14.82 9 12.646v-.214C9 10.36 10.421 9 12.485 9h.035c2.12 0 3.314 1.43 3.314 3.034v.21Zm-4.04.21v.227c0 .586.227.8.581.8.31 0 .564-.17.564-.743v-.367c0-.516-.275-.708-.572-.708-.346 0-.573.245-.573.791Z"/>
                     </svg>
                 </a>
-                support@promo-union.com
+                sales@jnbpromos.com
             </h4>
 
             <form action="" method="post">
@@ -668,7 +668,7 @@
                 </div>
 
                 <div class="form-group">
-                    <input type="submit" value="submit" name="submit_to_me" id="submit_to_me" class="w-25">
+                    <input type="submit" value="submit" name="submit_to_me" id="submit_to_me" class="w-100">
                 </div>
             </form>
         </div>
@@ -678,13 +678,13 @@
                 HEAD OFFICE
             </div>
             <div class="text-left bottomHomeContent">
-                210 Frederick Road,Fredericksburg,TX 78624
+                224 W 35th St Ste 500 #715 New York, NY 10001
             </div>
             <div class="text-left bottomHomeContent">
-                TEL: 518-765-1199
+                TEL: (646) 687-7800
             </div>
             <div class="text-left bottomHomeContent">
-                FAX: 800-655-8028
+                TEL: (646) 699-8277
             </div>
             <div class="text-left bottomHomeContent">
                 Email: support@promo-union.com
