--- a/shopshow/templates/goodInfo_m.html
+++ b/shopshow/templates/goodInfo_m.html
@@ -126,7 +126,7 @@
                     </div>
 
                     <div class = 'good_info_button'>
-                        <a href="mailto:support@promo-union.com">Contact us for more detail</a>
+                        <a href="mailto:sales@jnbpromos.com">Contact us for more detail</a>
                     </div>
                 </div>
                 
