--- a/shopshow/templates/home_m.html
+++ b/shopshow/templates/home_m.html
@@ -193,7 +193,7 @@
     </div>
 
     <div class="container jumbotron card_center", id="searchGoodGps">
-        <div class="whatWeDoTitle1 jumbotron-fluid">Promo Union--Order Tracking System</div>
+        <div class="whatWeDoTitle1 jumbotron-fluid">JNB Promo Inc--Order Tracking System</div>
         <div class="jumbotron jumbotron-fluid">
             <div class="container h-100">
                 <div class="row justify-content-between align-items-center text-md-center text-lg-left">
@@ -561,12 +561,11 @@
                 <div class="aboutInfoPlace">
                     <div class="aboutInfoTitle"><h1>About Us</h1></div>
                     <!-- <h4 class="aboutInfoInfo">Enjoy getting closer to the nature? You're in the right place!</h4> -->
-                    <p class="aboutInfoP">Welcome to our company, a union of 7 experienced promotional products companies that brings together a vast selection of products for businesses and individuals. By combining our expertise and resources, we are able to offer our customers a wider range of products and services than any individual company could provide.</p>
-                    <p class="aboutInfoP">With over 20 years of experience in the industry, we have become a leading provider of promotional products, offering our customers a one-stop-shop for all their branding needs. Our team is made up of knowledgeable professionals who are passionate about providing the best possible service to our clients.</p>
-                    <p class="aboutInfoP">Our mission is to provide the highest quality promotional products while also prioritizing the environment. We specialize in green and eco-friendly products, helping our customers to reduce their environmental impact while still achieving their marketing goals.</p>
-                    <p class="aboutInfoP">Our website showcases over 100,000 products, giving our clients access to an unparalleled selection of items to choose from. From classic promotional items like pens and mugs to unique eco-friendly products like bamboo utensils and recycled tote bags, we have something for everyone.
-                        At our company, we believe in putting our clients first. We strive to provide the best possible customer service, working with our clients to find the perfect product for their needs and ensuring that their orders are delivered on time and to their satisfaction. Our commitment to our clients is reflected in our 200+ positive reviews from satisfied customers.</p>
-                    <p class="aboutInfoP">Thank you for choosing us as your promotional products supplier. We look forward to helping you achieve your branding goals while also making a positive impact on the environment.</p>
+                    <p class="aboutInfoP">Certainly! Here's a company introduction for JNB Promos Inc, a promotional product supplier under ASI:</p>
+                    <p class="aboutInfoP">Welcome to JNB Promos Inc, your premier destination for innovative and effective promotional products! As an esteemed promotional product supplier accredited by ASI (Advertising Specialty Institute), we take immense pride in delivering exceptional solutions tailored to elevate your brand presence.</p>
+                    <p class="aboutInfoP">At JNB Promos Inc, we understand that promotional products are more than just tangible items - they represent your brand's unique identity and message. With this understanding, we offer a diverse range of promotional products designed to leave a lasting impact on your target audience. From custom apparel and stylish accessories to tech-savvy gadgets and eco-friendly merchandise, we bring your promotional vision to life.</p>
+                    <p class="aboutInfoP">What sets us apart is our commitment to excellence and creativity. Our team of dedicated professionals works tirelessly to craft personalized mock-ups, enabling you to visualize your promotional products before they become a reality. This free mock-up service allows you to refine and perfect your choices, ensuring the end result aligns seamlessly with your brand's image and goals.</p>
+                    <p class="aboutInfoP">Join us on this exciting journey of promotional success. Let's collaborate and create promotional strategies that resonate with your audience, leaving a lasting impression that propels your brand forward. Elevate your promotional game with JNB Promos Inc and watch your brand flourish.</p>
                     <a href="" class="btn btn-primary aboutInfoButton">learn more</a>
                 </div>
             </div>
@@ -609,13 +608,13 @@
         <div class="col-lg-6 m-auto">
             
             <h4 class="pageFoot-font">
-                <a href="mailto:support@promo-union.com">
+                <a href="mailto:sales@jnbpromos.com">
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-envelope-at-fill" viewBox="0 0 16 16">
                         <path d="M2 2A2 2 0 0 0 .05 3.555L8 8.414l7.95-4.859A2 2 0 0 0 14 2H2Zm-2 9.8V4.698l5.803 3.546L0 11.801Zm6.761-2.97-6.57 4.026A2 2 0 0 0 2 14h6.256A4.493 4.493 0 0 1 8 12.5a4.49 4.49 0 0 1 1.606-3.446l-.367-.225L8 9.586l-1.239-.757ZM16 9.671V4.697l-5.803 3.546.338.208A4.482 4.482 0 0 1 12.5 8c1.414 0 2.675.652 3.5 1.671Z"/>
                         <path d="M15.834 12.244c0 1.168-.577 2.025-1.587 2.025-.503 0-1.002-.228-1.12-.648h-.043c-.118.416-.543.643-1.015.643-.77 0-1.259-.542-1.259-1.434v-.529c0-.844.481-1.4 1.26-1.4.585 0 .87.333.953.63h.03v-.568h.905v2.19c0 .272.18.42.411.42.315 0 .639-.415.639-1.39v-.118c0-1.277-.95-2.326-2.484-2.326h-.04c-1.582 0-2.64 1.067-2.64 2.724v.157c0 1.867 1.237 2.654 2.57 2.654h.045c.507 0 .935-.07 1.18-.18v.731c-.219.1-.643.175-1.237.175h-.044C10.438 16 9 14.82 9 12.646v-.214C9 10.36 10.421 9 12.485 9h.035c2.12 0 3.314 1.43 3.314 3.034v.21Zm-4.04.21v.227c0 .586.227.8.581.8.31 0 .564-.17.564-.743v-.367c0-.516-.275-.708-.572-.708-.346 0-.573.245-.573.791Z"/>
                     </svg>
                 </a>
-                support@promo-union.com
+                sales@jnbpromos.com
             </h4>
 
             <form action="" method="post">
@@ -688,16 +687,16 @@
                 HEAD OFFICE
             </div>
             <div class="text-left bottomHomeContent">
-                210 Frederick Road,Fredericksburg,TX 78624
+                224 W 35th St Ste 500 #715 New York, NY 10001
             </div>
             <div class="text-left bottomHomeContent">
-                TEL: 518-765-1199
+                TEL: (646) 687-7800
             </div>
             <div class="text-left bottomHomeContent">
-                FAX: 800-655-8028
+                TEL: (646) 699-8277
             </div>
             <div class="text-left bottomHomeContent">
-                Email: support@promo-union.com
+                Email: sales@jnbpromos.com
             </div>
         </div>
     </div>
