--- a/shopshow/templates/goodInfo.html
+++ b/shopshow/templates/goodInfo.html
@@ -178,7 +178,7 @@
                         <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordionExample">
                             <div class="card-body border-bottom py-3 ">
                                 <div class="m-auto text-left">
-                                    <h6><strong>Category: </strong> Net Cost(ccccc)</h6>
+                                    <h6><strong>Price(ccccc)</h6>
                                     <table class="table table-bordered">
                                         <thead>
                                             <tr>
