--- a/shopshow/templates/home_m.html
+++ b/shopshow/templates/home_m.html
@@ -561,12 +561,12 @@
                 <div class="aboutInfoPlace">
                     <div class="aboutInfoTitle"><h1>About Us</h1></div>
                     <!-- <h4 class="aboutInfoInfo">Enjoy getting closer to the nature? You're in the right place!</h4> -->
-                    <p class="aboutInfoP">Certainly! Here's a company introduction for JNB Promos Inc, a promotional product supplier under ASI:</p>
+                    <!-- <p class="aboutInfoP">Certainly! Here's a company introduction for JNB Promos Inc, a promotional product supplier under ASI:</p> -->
                     <p class="aboutInfoP">Welcome to JNB Promos Inc, your premier destination for innovative and effective promotional products! As an esteemed promotional product supplier accredited by ASI (Advertising Specialty Institute), we take immense pride in delivering exceptional solutions tailored to elevate your brand presence.</p>
                     <p class="aboutInfoP">At JNB Promos Inc, we understand that promotional products are more than just tangible items - they represent your brand's unique identity and message. With this understanding, we offer a diverse range of promotional products designed to leave a lasting impact on your target audience. From custom apparel and stylish accessories to tech-savvy gadgets and eco-friendly merchandise, we bring your promotional vision to life.</p>
                     <p class="aboutInfoP">What sets us apart is our commitment to excellence and creativity. Our team of dedicated professionals works tirelessly to craft personalized mock-ups, enabling you to visualize your promotional products before they become a reality. This free mock-up service allows you to refine and perfect your choices, ensuring the end result aligns seamlessly with your brand's image and goals.</p>
                     <p class="aboutInfoP">Join us on this exciting journey of promotional success. Let's collaborate and create promotional strategies that resonate with your audience, leaving a lasting impression that propels your brand forward. Elevate your promotional game with JNB Promos Inc and watch your brand flourish.</p>
-                    <a href="" class="btn btn-primary aboutInfoButton">learn more</a>
+                    <a href="{% url 'contact' %}" class="btn btn-primary aboutInfoButton">learn more</a>
                 </div>
             </div>
 
@@ -579,7 +579,7 @@
                     <p class="aboutInfoP">Eco-Friendly Options: We understand the importance of sustainability and offer a range of eco-friendly promotional products. From reusable water bottles to recycled tote bags, we can help you make a positive impact on the environment.</p>
                     <p class="aboutInfoP">Shipping: We provide fast and reliable shipping services, ensuring that your promotional products are delivered on time and to your satisfaction. We also offer tracking information and notifications so that you can stay informed about the status of your order.</p>
                     <p class="aboutInfoP">At our company, we're committed to providing the highest quality services to our clients. We work closely with each client to understand their unique needs and offer tailored solutions that meet their goals. Contact us today to learn more about our services and how we can help you achieve your branding goals.</p>
-                    <a href="" class="btn btn-primary aboutInfoButton">learn more</a>
+                    <a href="{% url 'contact' %}" class="btn btn-primary aboutInfoButton">learn more</a>
                 </div>
             </div>
         </div>
@@ -690,11 +690,11 @@
                 224 W 35th St Ste 500 #715 New York, NY 10001
             </div>
             <div class="text-left bottomHomeContent">
-                TEL: (646) 687-7800
+                TEL: (646) 687-7800, (646) 699-8277
             </div>
-            <div class="text-left bottomHomeContent">
+            <!-- <div class="text-left bottomHomeContent">
                 TEL: (646) 699-8277
-            </div>
+            </div> -->
             <div class="text-left bottomHomeContent">
                 Email: sales@jnbpromos.com
             </div>
