--- a/shopshow/templates/goodInfo_m.html
+++ b/shopshow/templates/goodInfo_m.html
@@ -179,7 +179,7 @@
                         <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordionExample">
                             <div class="card-body border-bottom py-3 price_nomp">
                                 <div class="m-auto text-left">
-                                    <h6><strong>Category: </strong> Net Cost(ccccc)</h6>
+                                    <h6><strong>Price(ccccc)</h6>
                                     <table class="table table-bordered price_table_font">
                                         <thead>
                                             <tr>
