--- a/shopshow/templates/home.html
+++ b/shopshow/templates/home.html
@@ -552,7 +552,7 @@
                 <div class="aboutInfoPlace">
                     <div class="aboutInfoTitle"><h1>About Us</h1></div>
                     <!-- <h4 class="aboutInfoInfo">Enjoy getting closer to the nature? You're in the right place!</h4> -->
-                    <p class="aboutInfoP">Certainly! Here's a company introduction for JNB Promos Inc, a promotional product supplier under ASI:</p>
+                    <!-- <p class="aboutInfoP">Certainly! Here's a company introduction for JNB Promos Inc, a promotional product supplier under ASI:</p> -->
                     <p class="aboutInfoP">Welcome to JNB Promos Inc, your premier destination for innovative and effective promotional products! As an esteemed promotional product supplier accredited by ASI (Advertising Specialty Institute), we take immense pride in delivering exceptional solutions tailored to elevate your brand presence.</p>
                     <p class="aboutInfoP">At JNB Promos Inc, we understand that promotional products are more than just tangible items - they represent your brand's unique identity and message. With this understanding, we offer a diverse range of promotional products designed to leave a lasting impact on your target audience. From custom apparel and stylish accessories to tech-savvy gadgets and eco-friendly merchandise, we bring your promotional vision to life.</p>
                     <p class="aboutInfoP">What sets us apart is our commitment to excellence and creativity. Our team of dedicated professionals works tirelessly to craft personalized mock-ups, enabling you to visualize your promotional products before they become a reality. This free mock-up service allows you to refine and perfect your choices, ensuring the end result aligns seamlessly with your brand's image and goals.</p>
@@ -681,11 +681,11 @@
                 224 W 35th St Ste 500 #715 New York, NY 10001
             </div>
             <div class="text-left bottomHomeContent">
-                TEL: (646) 687-7800
+                TEL: (646) 687-7800, (646) 699-8277
             </div>
-            <div class="text-left bottomHomeContent">
+            <!-- <div class="text-left bottomHomeContent">
                 TEL: (646) 699-8277
-            </div>
+            </div> -->
             <div class="text-left bottomHomeContent">
                 Email: sales@jnbpromos.com
             </div>
