--- a/shopshow/templates/home_m.html
+++ b/shopshow/templates/home_m.html
@@ -420,7 +420,7 @@
 
     <div class="container" id="whatWedo">
         <div class="whatWeDoTitle1">For Our Clients</div>
-        <div class="whatWeDoTitle2">What We Do</div>
+        <!-- <div class="whatWeDoTitle2">What We Do</div> -->
         <div class="wedoitems row">
             <div class="w-50 wedoitem" data-toggle="tooltip" data-placement="bottom" title="Every Client can track their order status by searching the order#">
                 <div class="wedoitem-icon">
