--- a/shopshow/templates/home.html
+++ b/shopshow/templates/home.html
@@ -410,7 +410,7 @@
 
     <div class="container" id="whatWedo">
         <div class="whatWeDoTitle1">For Our Clients</div>
-        <div class="whatWeDoTitle2">What We Do</div>
+        <!-- <div class="whatWeDoTitle2">What We Do</div> -->
         <div class="wedoitems col-lg-12 row">
             <div class="col-lg-3 wedoitem" data-toggle="tooltip" data-placement="bottom" title="Every Client can track their order status by searching the order#">
                 <div class="wedoitem-icon">
