--- a/shopshow/templates/home_m.html
+++ b/shopshow/templates/home_m.html
@@ -687,7 +687,7 @@
                 HEAD OFFICE
             </div>
             <div class="text-left bottomHomeContent">
-                224 W 35th St Ste 500 #715 New York, NY 10001
+                67 West St Suite 401 GPB5 Brooklyn, NY 11222
             </div>
             <div class="text-left bottomHomeContent">
                 TEL: (646) 687-7800, (646) 699-8277
