--- a/shopshow/templates/home_m.html
+++ b/shopshow/templates/home_m.html
@@ -687,7 +687,7 @@
                 HEAD OFFICE
             </div>
             <div class="text-left bottomHomeContent">
-                67 West St Suite 401 GPB5 Brooklyn, NY 11222
+                1182 TROY SCHENECTADY RD STE 204, LATHEM, NY 12110
             </div>
             <div class="text-left bottomHomeContent">
                 TEL: (646) 687-7800, (646) 699-8277
